# MCSL2-API

./: API_CALLING.md  LICENSE  README.md  plugin.py  pyproject.toml
MCSL2_API/: .gitignore  __init__.py  core.py  example_agent_plugin.py  interaction.py  manifest.py  models.py  modern_plugin_example.py  plugin.py  safety.py
MCSL2_API/adapters/: __init__.py  download.py  server.py  ui.py
MCSL2_API/events/: __init__.py  bus.py
MCSL2_API/mcsl2_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MCSL2_API/utils/: __init__.py
utils/: threading.py
